Add tree generation

--- a/example/index.html
+++ b/example/index.html
@@ -61,6 +61,8 @@
         const stats = new Stats();
         document.body.appendChild(stats.dom);
 
+        mesh.geometry.computeBoundsTree();
+
         window.mesh = mesh
         const render = function () {
             stats.begin();
