--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>THREE.js BVH Geometry Raycasting</title>
     <script type="text/javascript" src="../node_modules/dat.gui/build/dat.gui.min.js"></script>
 
     <style type="text/css">
