--- a/example/octreedemo.html
+++ b/example/octreedemo.html
@@ -17,9 +17,43 @@
             width: 100%;
             height: 100%;
         }
+
+		canvas[picture-in-picture] {
+			height: 300px;
+			width: 300px;
+
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			outline: 1px solid rgba(255, 255, 255, 0.25);
+		}
+
+		#loaded {
+			width: 100%;
+			height: 3px;
+			background: white;
+			position: absolute;
+
+			left: 0;
+			bottom: 0;
+			z-index: 1000;
+		}
+
+		#in-frame {
+			opacity: 0.5;
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			color: white;
+			font-family: monospace;
+			padding: 5px;
+		}
+
     </style>
 </head>
 <body>
+    <div id="loaded"></div>
+    <div id="in-frame">TEST</div>
     <script type="module" src="./octreeindex.js"></script>
 </body>
 </html>
