Add a raycast component

--- a/example/octreedemo.html
+++ b/example/octreedemo.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div id="loaded"></div>
-    <div id="in-frame">TEST</div>
+    <div id="in-frame"></div>
     <script type="module" src="./octreeindex.js"></script>
 </body>
 </html>
