--- a/example/boundsTree.html
+++ b/example/boundsTree.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./boundsTree.js"></script>
 </body>
 </html>
