Remove webpack and bundle the octree demo

--- a/example/octree.html
+++ b/example/octree.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <script type="text/javascript" src="../node_modules/dat.gui/build/dat.gui.min.js"></script>
-    <script type="text/javascript" src="../node_modules/three/build/three.min.js"></script>
-    <script type="text/javascript" src="../node_modules/three/examples/js/controls/OrbitControls.js"></script>
+    <title>Octree Frustum Culling and Raycasting</title>
+
+    <!-- serve from static hosts because parcel does bundle global scripts at the moment -->
+    <script type="text/javascript" src="https://rawgit.com/mrdoob/three.js/r94/build/three.min.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/mrdoob/three.js/r94/examples/js/controls/OrbitControls.js"></script>
 
     <style type="text/css">
         html, body {
