--- a/example/boundsTree.html
+++ b/example/boundsTree.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>THREE.js BVH Geometry Raycasting</title>
-    <script type="text/javascript" src="../node_modules/dat.gui/build/dat.gui.min.js"></script>
+
+    <!-- serve from static hosts because parcel does bundle global scripts at the moment -->
+    <script type="text/javascript" src="https://rawgit.com/dataarts/dat.gui/v0.6.5/build/dat.gui.min.js"></script>
 
     <style type="text/css">
         html, body {
