--- a/example/boundsTree.html
+++ b/example/boundsTree.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>THREE.js BVH Geometry Raycasting</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	
     <style type="text/css">
         html, body {
             padding: 0;
