--- a/example/bundle/raycast.html
+++ b/example/bundle/raycast.html
@@ -1,1 +1,21 @@
-<!DOCTYPE html><html> <head> <title>THREE.js BVH Geometry Raycasting</title> <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> <style>body,html{padding:0;margin:0;overflow:hidden}canvas{width:100%;height:100%}</style> </head> <body> <script type="module" src="raycast.88074831.js"></script> </body> </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>THREE.js BVH Geometry Raycasting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <style>html, body {
+            padding: 0;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }</style>
+</head>
+<body>
+    <script type="module" src="raycast.88074831.js"></script>
+</body>
+</html>
