First working pass

--- a/example/distancecast.html
+++ b/example/distancecast.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js BVH Geometry Shapecasting</title>
+    <title>THREE.js BVH Geometry Closest Distance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="./shapecast.js"></script>
+    <script type="module" src="./distancecast.js"></script>
 </body>
 </html>
