--- a/example/distancecast.html
+++ b/example/distancecast.html
@@ -15,9 +15,19 @@
             width: 100%;
             height: 100%;
         }
+
+		#loader {
+			height: 2px;
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			background:white;
+
+		}
     </style>
 </head>
 <body>
+	<div id="loader"></div>
     <script type="module" src="./distancecast.js"></script>
 </body>
 </html>
