--- a/example/shapecast.html
+++ b/example/shapecast.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="./shapecast.js"></script>
+    <script src="./shapecast.js"></script>
 </body>
 </html>
