--- a/example/asyncGenerate.html
+++ b/example/asyncGenerate.html
@@ -15,9 +15,18 @@
             width: 100%;
             height: 100%;
         }
+
+		#info {
+			color: white;
+			position: absolute;
+			left: 10px;
+			bottom: 10px;
+			font-family: monospace;
+		}
     </style>
 </head>
 <body>
+	<div id="info"></div>
     <script src="./asyncGenerate.js"></script>
 </body>
 </html>
