--- a/example/asyncGenerate.html
+++ b/example/asyncGenerate.html
@@ -9,6 +9,7 @@
             padding: 0;
             margin: 0;
             overflow: hidden;
+			font-family: monospace;
         }
 
         canvas {
@@ -16,18 +17,17 @@
             height: 100%;
         }
 
-		#info {
-			color: white;
+		#output {
+			color: #956b00;
 			position: absolute;
 			left: 10px;
 			bottom: 10px;
-			font-family: monospace;
 			white-space: pre;
 		}
     </style>
 </head>
 <body>
-	<div id="info"></div>
+	<div id="output"></div>
     <script src="./asyncGenerate.js"></script>
 </body>
 </html>
