--- a/example/physics.html
+++ b/example/physics.html
@@ -33,7 +33,12 @@
 </head>
 <body>
 	<div id="info">
-		Model by Lowpolyprincipal on <a href="https://sketchfab.com/3d-models/low-poly-environment-jungle-scene-b07cbb11f78b43a3a51405e6c77a629e">Sketchfab</a>.
+		Rudimentary sphere collision physics with an environment using MeshBVH.
+
+		<br/>
+		<br/>
+
+		Model by <a href="https://sketchfab.com/3d-models/low-poly-environment-jungle-scene-b07cbb11f78b43a3a51405e6c77a629e">Lowpolyprincipal on Sketchfab</a>.
 	</div>
     <script src="./physics.js"></script>
 </body>
