--- a/example/selection.html
+++ b/example/selection.html
@@ -17,17 +17,19 @@
             height: 100%;
         }
 
-		#output {
-			color: #956b00;
+		#info {
 			position: absolute;
-			left: 10px;
-			bottom: 10px;
-			white-space: pre;
+			top: 0;
+			width: 100%;
+			color: white;
+			font-family: monospace;
+			text-align: center;
+			padding: 5px 0;
 		}
     </style>
 </head>
 <body>
-	<div id="output"></div>
+	<div id="info">Right click rotate, left click drag selection</div>
     <script src="./selection.js"></script>
 </body>
 </html>
