--- a/example/shapecast.html
+++ b/example/shapecast.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js BVH Geometry Shapecasting</title>
+    <title>THREE.js BVH Geometry Lasso Selection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
