--- a/example/bundle/sculpt.html
+++ b/example/bundle/sculpt.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html><head><title>THREE.js BVH Geometry Collect Triangles</title><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><style>body,html{padding:0;margin:0;overflow:hidden}canvas{width:100%;height:100%}#info{position:absolute;top:0;width:100%;color:#fff;font-family:monospace;text-align:center;padding:5px 0}a{color:#eee}</style></head><body> <div id="info"> Inspired by and Matcap texture from <a href="https://github.com/stephomi/sculptgl">SculptGL</a>. </div> <script src="sculpt.493e9c78.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>THREE.js BVH Geometry Sculpting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <style>html, body {
+            padding: 0;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+		#info {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			color: white;
+			font-family: monospace;
+			text-align: center;
+			padding: 5px 0;
+		}
+
+		a {
+			color: #eee;
+		}</style>
+</head>
+<body>
+	<div id="info">
+		Inspired by and Matcap texture from <a href="https://github.com/stephomi/sculptgl">SculptGL</a>.
+	</div>
+    <script src="sculpt.493e9c78.js"></script>
+</body>
+</html>
