--- a/example/overdraw.html
+++ b/example/overdraw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js BVH Geometry Collect Triangles</title>
+    <title>THREE.js BVH Geometry Overdraw</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
