--- a/example/bundle/shapecast.html
+++ b/example/bundle/shapecast.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>THREE.js BVH Geometry Lasso Selection</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <style>html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }</style>
-</head>
-<body>
-    <script src="shapecast.b93a7fe2.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>THREE.js BVH Geometry Lasso Selection</title><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><style>body,html{padding:0;margin:0;overflow:hidden}canvas{width:100%;height:100%}</style></head><body> <script src="shapecast.b93a7fe2.js"></script> </body></html>
