ran linter and fixed linter warnings

--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -15,9 +15,31 @@
             width: 100%;
             height: 100%;
         }
+
+        #info {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			color: white;
+			font-family: monospace;
+			text-align: center;
+			padding: 5px 0;
+		}
+
+		a {
+			color: #eee;
+		}
     </style>
 </head>
 <body>
+    <div id="info">
+		Point cloud intersection using MeshBVH.
+
+		<br/>
+		<br/>
+
+		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">Sitescape on Sketchfab</a>.
+	</div>
     <script src="./pointCloudIntersection.js"></script>
 </body>
 </html>
