add time output

--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -29,6 +29,16 @@
 		a {
 			color: #eee;
 		}
+
+		#output {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			padding: 5px;
+			color: white;
+			opacity: 0.5;
+			font-family: monospace;
+		}
     </style>
 </head>
 <body>
@@ -40,6 +50,7 @@
 
 		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">Sitescape on Sketchfab</a>.
 	</div>
+	<div id="output"></div>
     <script src="./pointCloudIntersection.js"></script>
 </body>
 </html>
