--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -43,12 +43,12 @@
 </head>
 <body>
     <div id="info">
-		Point cloud intersection using MeshBVH.
+		Point cloud intersection by modeling points as degenerate triangles with MeshBVH.
 
 		<br/>
 		<br/>
 
-		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">Sitescape on Sketchfab</a>.
+		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">SiteScape on Sketchfab</a>.
 	</div>
 	<div id="output"></div>
     <script src="./pointCloudIntersection.js"></script>
