update sculpt example to use different matcaps

--- a/example/sculpt.html
+++ b/example/sculpt.html
@@ -33,7 +33,10 @@
 </head>
 <body>
 	<div id="info">
-		Inspired by and Matcap texture from <a href="https://github.com/stephomi/sculptgl">SculptGL</a>.
+		Inspired by <a href="https://github.com/stephomi/sculptgl">SculptGL</a>.
+		<br/>
+		<br/>
+		Matcap textures from <a href="https://github.com/nidorx/matcaps/">nidorx/matcaps repo</a>.
 	</div>
     <script src="./sculpt.js"></script>
 </body>
