add output container

--- a/example/clippedEdges.html
+++ b/example/clippedEdges.html
@@ -29,6 +29,17 @@
 		a {
 			color: #eee;
 		}
+
+		#output {
+			padding: 5px;
+			bottom: 0;
+			left: 0;
+			opacity: 0.5;
+			position: absolute;
+			color: white;
+			font-family: monospace;
+			text-align: center;
+		}
     </style>
 </head>
 <body>
@@ -41,6 +52,7 @@
 
 		Model by <a href="https://sketchfab.com/3d-models/internal-combustion-engine-0be463c1041743d88f0c35b1c2f50f2f">T-FLEX CAD on Sketchfab</a>.
 	</div>
+	<div id="output"></div>
     <script src="./clippedEdges.js"></script>
 </body>
 </html>
