--- a/example/clippedEdges.html
+++ b/example/clippedEdges.html
@@ -45,9 +45,9 @@
 <body>
 	<div id="info">
 
-		Using MeshBVH to quickly detect plane-clipped triangle edges on
+		Using MeshBVH to quickly detect plane-clipped triangle edges on static,
 		<br/>
-		a static, merged model. Stencil buffer used for solid clip cap.
+		merged 2 million polygon model. Stencil buffer used for solid clip cap.
 		<br/>
 
 		Model by <a href="https://sketchfab.com/3d-models/internal-combustion-engine-0be463c1041743d88f0c35b1c2f50f2f">T-FLEX CAD on Sketchfab</a>.
