update inspector demo

--- a/example/inspector.html
+++ b/example/inspector.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="info">
-		Point cloud intersection by modeling points as degenerate triangles with MeshBVH.
+		Visual inspector for adjusting BVH parameters and interrogating BVH stats pertaining to traversal performance.
 	</div>
 	<div id="output"></div>
     <script src="./inspector.js"></script>
