--- a/example/inspector.html
+++ b/example/inspector.html
@@ -30,7 +30,7 @@
 			color: #eee;
 		}
 
-		#output {
+		#container {
 			position: absolute;
 			bottom: 0;
 			left: 0;
@@ -38,8 +38,11 @@
 			color: white;
 			opacity: 0.5;
 			font-family: monospace;
-			white-space: pre;
 			pointer-events: none;
+		}
+
+		#output, #benchmark {
+			white-space: pre;
 		}
     </style>
 </head>
@@ -47,7 +50,10 @@
     <div id="info">
 		Visual inspector for adjusting BVH parameters and interrogating BVH stats pertaining to traversal performance.
 	</div>
-	<div id="output"></div>
+	<div id="container">
+		<div id="output"></div>
+		<div id="benchmark"></div>
+	</div>
     <script src="./inspector.js"></script>
 </body>
 </html>
