--- a/example/inspector.html
+++ b/example/inspector.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js BVH Geometry point clouds</title>
+    <title>THREE.js BVH Inspector</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div id="info">
-		Visual inspector for adjusting BVH parameters and interrogating BVH stats pertaining to traversal performance.
+		BVH inspector showing the number of traversals at a given pixel, various BVH construction stats, and basic raycast benchmark.
 	</div>
 	<div id="container">
 		<div id="output"></div>
