--- a/example/inspector.html
+++ b/example/inspector.html
@@ -52,7 +52,7 @@
 		BVH inspector showing the number of traversals at a given pixel, various BVH construction stats, and basic raycast benchmark.
 		<br/>
 		<br/>
-		Pixels with traversals above the "traversalTreshold" are highlighted in red.
+		Pixels with traversal counts above the "traversalTreshold" are highlighted in red.
 	</div>
 	<div id="container">
 		<div id="output"></div>
