debug example updates

--- a/example/edgeIntersect.html
+++ b/example/edgeIntersect.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script src="./shapecast.js"></script>
+    <script src="./edgeIntersect.js"></script>
 </body>
 </html>
