--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -21,15 +21,14 @@
             position: absolute;
             top: 0;
             width: 100%;
-            color: white;
+            color: #778;
             font-family: monospace;
             text-align: center;
             padding: 5px 0;
-            pointer-events: none;
-        }
+		}
 
         a {
-            color: #eee;
+            color: #778;
         }
 
         #output {
@@ -49,6 +48,9 @@
 </head>
 <body>
     <div id="info">
+		CPU Path Tracer demo based on a smattering of online resources. Engine by <a href="https://sketchfab.com/3d-models/internal-combustion-engine-0be463c1041743d88f0c35b1c2f50f2f">T-FLEX CAD on Sketchfab</a>.
+		<br/><br/>
+		Checkout the <a href="https://raytracing.github.io/">Raytracing in One Weekend</a> series and <a href="http://pbr-book.org/">PBR Book</a> for some great introductions to path tracing!
 	</div>
 	<div id="output">
 	</div>
