--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -36,10 +36,9 @@
             bottom: 0;
             left: 0;
             padding: 5px;
-            color: white;
+            color: #ccc;
             opacity: 0.75;
-			background-color: rgba( 0, 0, 0, 0.35 );
-            font-family: monospace;
+			font-family: monospace;
             pointer-events: none;
 			white-space: pre;
         }
