--- a/example/gpuPathTracing.html
+++ b/example/gpuPathTracing.html
@@ -16,9 +16,22 @@
             width: 100%;
             height: 100%;
         }
+
+		#output {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 5px;
+            color: #777;
+            opacity: 0.75;
+			font-family: monospace;
+            pointer-events: none;
+			white-space: pre;
+        }
     </style>
 </head>
 <body>
+	<div id="output"></div>
     <script src="./gpuPathTracing.js"></script>
 </body>
 </html>
