--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -36,11 +36,12 @@
             bottom: 0;
             left: 0;
             padding: 5px;
-            color: #ccc;
+            color: white;
             opacity: 0.75;
-			font-family: monospace;
+            background-color: rgba( 0, 0, 0, 0.35 );
+            font-family: monospace;
             pointer-events: none;
-			white-space: pre;
+            white-space: pre;
         }
     </style>
 </head>
