--- a/example/gpuPathTracingSimple.html
+++ b/example/gpuPathTracingSimple.html
@@ -16,9 +16,22 @@
             width: 100%;
             height: 100%;
         }
+
+		#info {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            color: #777;
+            font-family: monospace;
+            text-align: center;
+            padding: 5px 0;
+		}
     </style>
 </head>
 <body>
+	<div id="info">
+		Simple example of running BVH intersections on an animated geometry.
+	</div>
     <script src="./gpuPathTracingSimple.js"></script>
 </body>
 </html>
