--- a/example/gpuPathTracingSimple.html
+++ b/example/gpuPathTracingSimple.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 	<div id="info">
-		Simple example of running BVH intersections on an animated geometry.
+		Simple example of running BVH intersections on an animated geometry on the GPU in a shader.
 	</div>
     <script src="./gpuPathTracingSimple.js"></script>
 </body>
