--- a/example/gpuPathTracing.html
+++ b/example/gpuPathTracing.html
@@ -37,12 +37,12 @@
             font-family: monospace;
             text-align: center;
             padding: 5px 0;
-		}
+        }
     </style>
 </head>
 <body>
 	<div id="info">
-		Basic Lambertian material Path Tracer implemented using BVH intersections on the GPU.
+		Lambertian material Path Tracer implemented using BVH intersections on the GPU.
 	</div>
 	<div id="output"></div>
     <script src="./gpuPathTracing.js"></script>
