Get parcel 2 working

--- a/example/asyncGenerate.html
+++ b/example/asyncGenerate.html
@@ -28,6 +28,6 @@
 </head>
 <body>
 	<div id="output"></div>
-    <script src="./asyncGenerate.js"></script>
+    <script type="module" src="./asyncGenerate.js"></script>
 </body>
 </html>
