--- a/example/characterMovement.html
+++ b/example/characterMovement.html
@@ -40,6 +40,6 @@
 
 		Model by <a href="https://sketchfab.com/3d-models/dungeon-low-poly-game-level-challenge-0fd0d477d7424e5d8915ce0c06a2920d">Warkarma on Sketchfab</a>.
 	</div>
-    <script src="./characterMovement.js"></script>
+    <script type="module" src="./characterMovement.js"></script>
 </body>
 </html>
