--- a/example/clippedEdges.html
+++ b/example/clippedEdges.html
@@ -53,6 +53,6 @@
 		Model by <a href="https://sketchfab.com/3d-models/internal-combustion-engine-0be463c1041743d88f0c35b1c2f50f2f">T-FLEX CAD on Sketchfab</a>.
 	</div>
 	<div id="output"></div>
-    <script src="./clippedEdges.js"></script>
+    <script type="module" src="./clippedEdges.js"></script>
 </body>
 </html>
