--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -53,6 +53,6 @@
 	</div>
 	<div id="output">
 	</div>
-    <script src="./cpuPathTracing.js"></script>
+    <script type="module" src="./cpuPathTracing.js"></script>
 </body>
 </html>
