--- a/example/distancecast.html
+++ b/example/distancecast.html
@@ -28,6 +28,6 @@
 </head>
 <body>
 	<div id="loader"></div>
-    <script src="./distancecast.js"></script>
+    <script type="module" src="./distancecast.js"></script>
 </body>
 </html>
