--- a/example/gpuPathTracingSimple.html
+++ b/example/gpuPathTracingSimple.html
@@ -32,6 +32,6 @@
 	<div id="info">
 		Simple example of running BVH intersections on an animated geometry on the GPU in a shader.
 	</div>
-    <script src="./gpuPathTracingSimple.js"></script>
+    <script type="module" src="./gpuPathTracingSimple.js"></script>
 </body>
 </html>
