--- a/example/inspector.html
+++ b/example/inspector.html
@@ -58,6 +58,6 @@
 		<div id="output"></div>
 		<div id="benchmark"></div>
 	</div>
-    <script src="./inspector.js"></script>
+    <script type="module" src="./inspector.js"></script>
 </body>
 </html>
