--- a/example/physics.html
+++ b/example/physics.html
@@ -40,6 +40,6 @@
 
 		Model by <a href="https://sketchfab.com/3d-models/low-poly-environment-jungle-scene-b07cbb11f78b43a3a51405e6c77a629e">Lowpolyprincipal on Sketchfab</a>.
 	</div>
-    <script src="./physics.js"></script>
+    <script type="module" src="./physics.js"></script>
 </body>
 </html>
