--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -51,6 +51,6 @@
 		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">SiteScape on Sketchfab</a>.
 	</div>
 	<div id="output"></div>
-    <script src="./pointCloudIntersection.js"></script>
+    <script type="module" src="./pointCloudIntersection.js"></script>
 </body>
 </html>
