--- a/example/randomSampleDebug.html
+++ b/example/randomSampleDebug.html
@@ -28,6 +28,6 @@
 </head>
 <body>
 	<div id="output"></div>
-    <script src="./randomSampleDebug.js"></script>
+    <script type="module" src="./randomSampleDebug.js"></script>
 </body>
 </html>
