--- a/example/sculpt.html
+++ b/example/sculpt.html
@@ -38,6 +38,6 @@
 		<br/>
 		Matcap textures from <a href="https://github.com/nidorx/matcaps/">nidorx/matcaps repo</a>.
 	</div>
-    <script src="./sculpt.js"></script>
+    <script type="module" src="./sculpt.js"></script>
 </body>
 </html>
