--- a/example/selection.html
+++ b/example/selection.html
@@ -46,6 +46,6 @@
 		NOTE: Triangles and bounds clipped by the camera not supported
 	</div>
 	<div id="output"></div>
-    <script src="./selection.js"></script>
+    <script type="module" src="./selection.js"></script>
 </body>
 </html>
