--- a/example/collectTriangles.html
+++ b/example/collectTriangles.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script src="./collectTriangles.js"></script>
+    <script type="module" src="./collectTriangles.js"></script>
 </body>
 </html>
