--- a/example/gpuPathTracing.html
+++ b/example/gpuPathTracing.html
@@ -45,6 +45,6 @@
 		Lambertian material Path Tracer implemented using BVH intersections on the GPU.
 	</div>
 	<div id="output"></div>
-    <script src="./gpuPathTracing.js"></script>
+    <script type="module" src="./gpuPathTracing.js"></script>
 </body>
 </html>
