--- a/example/raycast.html
+++ b/example/raycast.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <script src="./raycast.js"></script>
+    <script type="module" src="./raycast.js"></script>
 </body>
 </html>
