--- a/example/skinnedMesh.html
+++ b/example/skinnedMesh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js BVH Geometry Collect Triangles</title>
+    <title>THREE.js Skinned Mesh BVH</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
