Update example titles

--- a/example/clippedEdges.html
+++ b/example/clippedEdges.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE MeshBVH Clipped Edges</title>
+    <title>three-mesh-bvh - Clipped Edges</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
