--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THREE.js CPU Path Tracing</title>
+    <title>three-mesh-bvh - CPU Path Tracing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
