--- a/example/triangleIntersect.html
+++ b/example/triangleIntersect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Triangle-Triangle Intersection</title>
+    <title>three-mesh-bvh - Triangle-Triangle Intersection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
