--- a/example/voxelize.html
+++ b/example/voxelize.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three-Mesh-BVH - Geometry Voxelization</title>
+    <title>three-mesh-bvh - Geometry Voxelization</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
