--- a/example/edgeProjection.html
+++ b/example/edgeProjection.html
@@ -18,34 +18,17 @@
         }
 
 		#output {
-			color: #956b00;
+			color: #333333;
 			position: absolute;
 			left: 10px;
 			bottom: 10px;
 			white-space: pre;
 		}
 
-		#loading-container {
-			position: fixed;
-			bottom: 0;
-			width: 100%;
-			visibility: hidden;
-		}
-
-		#loading-container .text {
-			color: #956b00;
-			text-align: center;
-		}
-
-		#loading-container .bar {
-			height: 5px;
-			background: #956b00;
-			width: 50%;
-		}
-
     </style>
 </head>
 <body>
+	<div id="output"></div>
     <script type="module" src="./edgeProjection.js"></script>
 </body>
 </html>
