--- a/example/diamond.html
+++ b/example/diamond.html
@@ -12,7 +12,7 @@
             margin: 0;
             overflow: hidden;
         }
-        
+
         canvas {
             width: 100%;
             height: 100%;
@@ -24,7 +24,12 @@
 <body>
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="importmap">
-        { "imports": { "three": "https://unpkg.com/three@0.144.0/build/three.module.js" } }
+        {
+			"imports": {
+				"three": "https://unpkg.com/three@0.144.0/build/three.module.js",
+				"three/examples/": "https://unpkg.com/three@0.144.0/examples/"
+			}
+		}
     </script>
     <script type="module" src="./diamond.js"></script>
 </body>
