--- a/example/diamond.html
+++ b/example/diamond.html
@@ -38,7 +38,7 @@
 	<div id="info">
 		Using shader ray tracing to model internal reflection for a diamond material.
 		<br/>
-		Model from <a href="https://sketchfab.com/3d-models/diamond-low-poly-405cc8175019452daa01999fd1466731">Sketchfab</a>.
+		Model from <a href="https://sketchfab.com/3d-models/diamond-low-poly-405cc8175019452daa01999fd1466731">Sketchfab</a>. Full material implementation available <a href="https://github.com/pmndrs/drei/blob/master/src/materials/MeshRefractionMaterial.tsx">here</a>.
 	</div>
     <script type="module" src="./diamond.js"></script>
 </body>
