--- a/example/sdfGeneration.html
+++ b/example/sdfGeneration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Async BVH Generation</title>
+    <title>three-mesh-bvh - Fast SDF Generation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <style type="text/css">
