Prep raymarch material

--- a/example/sdfGeneration.html
+++ b/example/sdfGeneration.html
@@ -10,6 +10,7 @@
             margin: 0;
             overflow: hidden;
 			font-family: monospace;
+			background-color: #111;
         }
 
         canvas {
