--- a/example/asyncGenerate.html
+++ b/example/asyncGenerate.html
@@ -4,6 +4,11 @@
     <title>three-mesh-bvh - Async BVH Generation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+	<!--
+		Load a service worker to append two necessary headers for taking
+		advantage of SharedArrayBuffers.
+	-->
+	<script src="./lib/coi-serviceworker.js"></script>
     <style type="text/css">
         html, body {
             padding: 0;
