Add `importmap.js` in every `example/*.html`

--- a/example/edgeIntersect.html
+++ b/example/edgeIntersect.html
@@ -16,6 +16,7 @@
             height: 100%;
         }
     </style>
+    <script src="importmap.js"></script>
 </head>
 <body>
     <script type="module" src="./edgeIntersect.js"></script>
