--- a/example/inspector.html
+++ b/example/inspector.html
@@ -46,6 +46,7 @@
             white-space: pre;
         }
     </style>
+    <script src="importmap.js"></script>
 </head>
 <body>
     <div id="info">
