--- a/example/cpuPathTracing.html
+++ b/example/cpuPathTracing.html
@@ -44,6 +44,7 @@
             white-space: pre;
         }
     </style>
+    <script src="importmap.js"></script>
 </head>
 <body>
     <div id="info">
