--- a/example/diamond.html
+++ b/example/diamond.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Total Internal Refraction</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<head>
+		<meta charset="UTF-8"/>
+		<link rel="shortcut icon" href="#">	<!--avoid favicon error in the console-->
+		<title>Total Internal Refraction</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <style type="text/css">
-        html,
-        body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
+		<style type="text/css">
+			html,
+			body {
+				padding: 0;
+				margin: 0;
+				overflow: hidden;
+			}
 
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
+			canvas {
+				width: 100%;
+				height: 100%;
+			}
 
-		#info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
+			#info {
+				position: absolute;
+				top: 0;
+				width: 100%;
+				color: white;
+				font-family: monospace;
+				text-align: center;
+				padding: 5px 0;
+			}
+
+			a {
+				color: white;
+			}
+		</style>
+
+		<script type="importmap"> {
+			"imports": {
+				"three": "../node_modules/three/build/three.module.js",
+				"three/addons/": "../node_modules/three/examples/jsm/"
+			}
 		}
+		</script>
 
-		a {
-			color: white;
-		}
-    </style>
-</head>
+	</head>
 
-<body>
-	<div id="info">
-		Using shader ray tracing to model internal reflection for a diamond material.
-		<br/>
-		Model from <a href="https://sketchfab.com/3d-models/diamond-low-poly-405cc8175019452daa01999fd1466731">Sketchfab</a>. Full material implementation available <a href="https://github.com/pmndrs/drei/blob/master/src/materials/MeshRefractionMaterial.tsx">here</a>.
-	</div>
-    <script type="module" src="./diamond.js"></script>
-</body>
+	<body>
+
+		<div id="info">
+			Using shader ray tracing to model internal reflection for a diamond material.
+			<br/>
+			Model from <a href="https://sketchfab.com/3d-models/diamond-low-poly-405cc8175019452daa01999fd1466731">Sketchfab</a>. Full material implementation available <a href="https://github.com/pmndrs/drei/blob/master/src/materials/MeshRefractionMaterial.tsx">here</a>.
+		</div>
+
+		<script type="module" src="./diamond.js"></script>
+
+	</body>
 
 </html>
