--- a/example/gpuPathTracing.html
+++ b/example/gpuPathTracing.html
@@ -1,50 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>three-mesh-bvh - GPU Path Tracing</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-            font-family: monospace;
-        }
+	<head>
+		<meta charset="UTF-8"/>
+		<link rel="shortcut icon" href="#">	<!--avoid favicon error in the console-->
+		<title>three-mesh-bvh - GPU Path Tracing</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
+		<style type="text/css">
+			html, body {
+				padding: 0;
+				margin: 0;
+				overflow: hidden;
+				font-family: monospace;
+			}
 
-        #output {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            padding: 5px;
-            color: #777;
-            opacity: 0.75;
-            font-family: monospace;
-            pointer-events: none;
-            white-space: pre;
-        }
+			canvas {
+				width: 100%;
+				height: 100%;
+			}
 
-        #info {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            color: #777;
-            font-family: monospace;
-            text-align: center;
-            padding: 5px 0;
-        }
-    </style>
-</head>
-<body>
-	<div id="info">
-		Lambertian material Path Tracer implemented using BVH intersections on the GPU.
-	</div>
-	<div id="output"></div>
-    <script type="module" src="./gpuPathTracing.js"></script>
-</body>
+			#output {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				padding: 5px;
+				color: #777;
+				opacity: 0.75;
+				font-family: monospace;
+				pointer-events: none;
+				white-space: pre;
+			}
+
+			#info {
+				position: absolute;
+				top: 0;
+				width: 100%;
+				color: #777;
+				font-family: monospace;
+				text-align: center;
+				padding: 5px 0;
+			}
+		</style>
+
+		<script type="importmap"> {
+			"imports": {
+				"three": "../node_modules/three/build/three.module.js",
+				"three/addons/": "../node_modules/three/examples/jsm/"
+			}
+		}
+		</script>
+
+	</head>
+
+	<body>
+
+		<div id="info">
+			Lambertian material Path Tracer implemented using BVH intersections on the GPU.
+		</div>
+		<div id="output"></div>
+
+		<script type="module" src="./gpuPathTracing.js"></script>
+
+	</body>
+
 </html>
