--- a/example/webgpu_gpuPathTracingSimpleCompute.html
+++ b/example/webgpu_gpuPathTracingSimpleCompute.html
@@ -34,7 +34,7 @@
 
 		<script type="importmap"> {
 			"imports": {
-				"three": "../node_modules/three/build/three.webgpu.js",
+				"three": "../node_modules/three/build/three.module.js",
 				"three/webgpu": "../node_modules/three/build/three.webgpu.js",
 				"three/tsl": "../node_modules/three/build/three.tsl.js",
 				"three/addons/": "../node_modules/three/examples/jsm/"
