--- a/example/webgpu_gpuPathTracingSimpleCompute.html
+++ b/example/webgpu_gpuPathTracingSimpleCompute.html
@@ -46,9 +46,7 @@
 
 	<body>
 
-		<div id="info">
-			Simple example of running BVH intersections on an animated geometry on the GPU in a WGSL compute shader.
-		</div>
+		<div id="info">Running BVH ray intersections with a WGSL compute shader.</div>
 
 		<script type="module" src="./webgpu_gpuPathTracingSimpleCompute.js"></script>
 
