--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="info">
-		Point cloud intersection by modeling points as degenerate triangles with MeshBVH.
+		Accelerated raycasting of 2 million points using PointsBVH.
 
 		<br/>
 		<br/>
