Update example, fix raycasting

--- a/example/lineIntersection.html
+++ b/example/lineIntersection.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="info">
-		Accelerated raycasting of complex line geometries using LineBVH.
+		Accelerated raycasting of 1 million lines using LineBVH
 	</div>
 	<div id="output"></div>
     <script type="module" src="./lineIntersection.js"></script>
