--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="info">
-		Accelerated raycasting of 2 million points using PointsBVH.
+		Accelerated raycasting of 2 million points using PointsBVH
 
 		<br/>
 		<br/>
