Get SkinnedMeshBVH working

--- a/example/skinnedMesh.html
+++ b/example/skinnedMesh.html
@@ -44,8 +44,7 @@
 </head>
 <body>
 	<div id="info">
-		SkinnedMesh and morph target BVH support by iteratively generating a static version of<br/>
-		the geometry and refitting the existing BVH.
+		SkinnedMesh and morph target BVH support with a custom SkinnedMeshBVH
 	</div>
 	<div id="model-info">
 		<div id="output"></div>
