--- a/example/pointCloudIntersection.html
+++ b/example/pointCloudIntersection.html
@@ -1,48 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Geometry point clouds</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-        #info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
-		a {
-			color: #eee;
-		}
-
-		#output {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			padding: 5px;
-			color: white;
-			opacity: 0.5;
-			font-family: monospace;
-		}
-    </style>
+	<title>three-mesh-bvh - Point Cloud Intersection</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div id="info">
+	<div id="info">
 		Accelerated raycasting of 2 million points using PointsBVH
 
 		<br/>
@@ -51,6 +15,6 @@
 		Model by <a href="https://sketchfab.com/3d-models/1982-porsche-911-sitescape-3d-scan-7e315942b6db428194314285183b5896">SiteScape on Sketchfab</a>.
 	</div>
 	<div id="output"></div>
-    <script type="module" src="./pointCloudIntersection.js"></script>
+	<script type="module" src="./pointCloudIntersection.js"></script>
 </body>
 </html>
