--- a/example/raycast.html
+++ b/example/raycast.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Complex Geometry Raycasting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+	<title>three-mesh-bvh - Raycasting</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <script type="module" src="./raycast.js"></script>
+	<script type="module" src="./raycast.js"></script>
 </body>
 </html>
