--- a/example/physics.html
+++ b/example/physics.html
@@ -1,35 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Rudimentary Sphere Physics</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-		#info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
-		a {
-			color: #eee;
-		}
-    </style>
+	<title>three-mesh-bvh - Sphere Physics</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 	<div id="info">
@@ -40,6 +14,6 @@
 
 		Model by <a href="https://sketchfab.com/3d-models/low-poly-environment-jungle-scene-b07cbb11f78b43a3a51405e6c77a629e">Lowpolyprincipal on Sketchfab</a>.
 	</div>
-    <script type="module" src="./physics.js"></script>
+	<script type="module" src="./physics.js"></script>
 </body>
 </html>
