--- a/example/selection.html
+++ b/example/selection.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Geometry Collect Triangles</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>three-mesh-bvh - Triangle Selection</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-			font-family: monospace;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-		#info, #output {
-			position: absolute;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
+	<style type="text/css">
 		#info {
-			top: 0;
-			width: 100%;
 			pointer-events: none;
 		}
-
-		#output {
-			padding: 5px;
-			bottom: 0;
-			left: 0;
-			opacity: 0.5;
-		}
-    </style>
+	</style>
 </head>
 <body>
 	<div id="info">
@@ -46,6 +18,6 @@
 		NOTE: Triangles and bounds clipped by the camera not supported
 	</div>
 	<div id="output"></div>
-    <script type="module" src="./selection.js"></script>
+	<script type="module" src="./selection.js"></script>
 </body>
 </html>
